fucking hard modification

--- a/home/index.html
+++ b/home/index.html
@@ -2,15 +2,16 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>个人网页</title>
+		<title>HOME-PAGE</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css"/>
+		<link rel="icon" href="img/home.png">
 	</head>
 	<body>
 		<div class="box">
 			<div class="top">
-				<img src="img/lilbaby.jpg" alt="">
+				<img src="img/lilbaby.jpg" alt="a photo of lil baby">
 				<h3>My Favorite Rapper</h3>
-				<p>a introduction to lil baby</p>
+				<p></p>
 			</div>
 			<div class="bottom">
 				<ul>
@@ -27,9 +28,9 @@
 						</a>
 					</li>
 					<li>
-						<a href="">
-							<img src="" >
-							<span>小飞</span>
+						<a href="../intro/intro.html">
+							<img src="img/intro.png" >
+							<span>Introduction</span>
 						</a>
 					</li>
 					<li>
