--- a/album-page/album.html
+++ b/album-page/album.html
@@ -13,9 +13,9 @@
   <div class="circle"></div>
   <div class="content">
     <h2>Drip Harder</h2>
-    <p>Launched by lil baby and Gunna in 2018 
+    <p>Launched by lil baby and Gunna in 2018.
     </p>
-    <!-- <a href="#">Buy Now</a> -->
+    <!-- <a href="../home/index.html"></a> -->
   </div>
   <img src="image/drip harder.jpg" alt="">
 </div>
@@ -23,7 +23,7 @@
   <div class="circle"></div>
   <div class="content">
     <h2>The Voice of the Heroes</h2>
-    <p>Grammy nominated rapper lil baby teamed up with lil durk for a new mixtape
+    <p>Grammy nominated rapper lil baby teamed up with lil durk for a new mixtape.
     </p>
     <!-- <a href="#">Buy Now</a> -->
   </div>
@@ -33,28 +33,28 @@
 <div class="card">
   <div class="circle"></div>
   <div class="content">
-    <h2>The Voice of the Heroes</h2>
-    <p>Grammy nominated rapper lil baby teamed up with lil durk for a new mixtape
+    <h2>My Turn</h2>
+    <p>One of the most popular albums in 2020.
     </p>
     <!-- <a href="#">Buy Now</a> -->
   </div>
-  <img src="image/voice.jpg" alt="">
+  <img src="image/myturn.jpg" alt="">
 </div>
 
 <div class="card">
   <div class="circle"></div>
   <div class="content">
-    <h2>The Voice of the Heroes</h2>
-    <p>Grammy nominated rapper lil baby teamed up with lil durk for a new mixtape
+    <h2>It's Only Me</h2>
+    <p>This album is lil baby's third studio album released recently in October 2022. 
     </p>
     <!-- <a href="#">Buy Now</a> -->
   </div>
-  <img src="image/voice.jpg" alt="">
+  <img src="image/itsonme.jpg" alt="">
 </div>
 
 <footer class="footer">
   <a href="../home/index.html">
-    Home
+    <img src="../home/img/home.png">
   </a>
 </footer>
 </body>
