--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>My Space</title>
-        <link rel="stylesheet" href="./index.css" />
-        <link rel="stylesheet" href="./home.css" />
+        <link rel="stylesheet" href="./assemble.css" />
+        <!-- <style>
+            *{
+                filter: grayscale(100%);
+            }
+        </style> -->
     </head>
     <body>
         <header class="top-header">
@@ -35,8 +39,7 @@
                         <li>好友6</li>
                     </ul>
                 </div>
-                <!-- <div><span></span></div>
-                <div><span></span></div> -->
+                <div><span>Sign out</span></div>
             </div>
             <div class="top-header-info">
                 <audio src="./music/SASIOVERLXRD - 薄荷水 (Prod.Muto).mp3" autoplay controls loop>您的浏览器不支持 audio 元素</audio>
@@ -49,7 +52,7 @@
             <div class="main-nav-container">
                 <nav class="main-nav">
                     <div class="avatar">
-                        <img src="./images/QQ.jpg" alt="" />
+                        <img src="./images/QQ.jpg" alt="avatar" />
                     </div>
                     <ul class="user-nav">
                         <li>
@@ -62,10 +65,10 @@
                     </ul>
                 </nav>
             </div>
-            <div class="main-content">
+            <div class="main-content-home">
                 <div class="main-state">
                     <div class="title">
-                        <img src="./images/QQ.jpg" alt="">
+                        <img src="./images/QQ.jpg" alt="avatar">
                         <div>
                             <p>善良的小飞</p>
                             <p>2022年10月1日</p>
@@ -117,7 +120,7 @@
                 </div>
                 <div class="main-state">
                     <div class="title">
-                        <img src="./images/QQ.jpg" alt="">
+                        <img src="./images/QQ.jpg" alt="avatar">
                         <div>
                             <p>善良的小飞</p>
                             <p>2022年8月27日</p>
@@ -128,8 +131,8 @@
                         <p>欢迎报考西南交通大学</p>
                     </div>
                     <div class="state-images">
-                        <img src="images/swjtuLogo.jpg" alt="">
-                        <img src="images/swjtuGate.jpg" alt="">
+                        <img src="images/swjtuLogo.jpg" alt="picture">
+                        <img src="images/swjtuGate.jpg" alt="picture">
                     </div>
                     <p class="phone-info">
                         From iPhone 12Pro(5G)
