--- a/photos.html
+++ b/photos.html
@@ -5,8 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Photos</title>
-        <link rel="stylesheet" href="./index.css" />
-        <link rel="stylesheet" href="./photos.css" />
+        <link rel="stylesheet" href="./assemble.css" />
     </head>
     <body>
         <header class="top-header">
@@ -35,8 +34,7 @@
                         <li>好友6</li>
                     </ul>
                 </div>
-                <!-- <div><span></span></div>
-                <div><span></span></div> -->
+                <div><span>Sign out</span></div>
             </div>
             <div class="top-header-info">
                 <audio src="./music/SASIOVERLXRD - 薄荷水 (Prod.Muto).mp3" controls loop>您的浏览器不支持 audio 元素</audio>
@@ -44,12 +42,12 @@
                 <input type="text" placeholder="type to search.." />
             </div>
         </header>
-        <div class="banner"></div>
+        <div class="banner banner-photos"></div>
         <div class="main">
             <div class="main-nav-container">
                 <nav class="main-nav">
                     <div class="avatar">
-                        <img src="./images/QQ.jpg" alt="" />
+                        <img src="./images/QQ.jpg" alt="avatar" />
                     </div>
                     <ul class="user-nav">
                         <li>
@@ -62,13 +60,13 @@
                     </ul>
                 </nav>
             </div>
-            <div class="main-content">
-                <img src="images/photo1.jpg" alt="">
-                <img src="images/photo2.jpg" alt="">
-                <img src="images/photo3.jpg" alt="">
-                <img src="images/photo4.jpg" alt="">
-                <img src="images/photo5.jpg" alt="">
-                <img src="images/photo6.jpg" alt="">
+            <div class="main-content main-content-photos">
+                <img src="images/photo1.jpg" alt="photo">
+                <img src="images/photo2.jpg" alt="photo">
+                <img src="images/photo3.jpg" alt="photo">
+                <img src="images/photo4.jpg" alt="photo">
+                <img src="images/photo5.jpg" alt="photo">
+                <img src="images/photo6.jpg" alt="photo">
 
             </div>
         </div>
