--- a/message.html
+++ b/message.html
@@ -5,8 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>message</title>
-        <link rel="stylesheet" href="./index.css" />
-        <link rel="stylesheet" href="./message.css" />
+        <link rel="stylesheet" href="./assemble.css" />
     </head>
     <body>
         <header class="top-header">
@@ -35,8 +34,7 @@
                         <li>好友6</li>
                     </ul>
                 </div>
-                <!-- <div><span></span></div>
-                <div><span></span></div> -->
+                <div><span>Sign out</span></div>
             </div>
             <div class="top-header-info">
                  <audio src="./music/SASIOVERLXRD - 薄荷水 (Prod.Muto).mp3" controls loop>您的浏览器不支持 audio 元素</audio>
@@ -44,12 +42,12 @@
                  <input type="text" placeholder="type to search.." />
             </div>
         </header>
-        <div class="banner"></div>
+        <div class="banner banner-message"></div>
         <div class="main">
             <div class="main-nav-container">
                 <nav class="main-nav">
                     <div class="avatar">
-                        <img src="./images/QQ.jpg" alt="" />
+                        <img src="./images/QQ.jpg" alt="avatar" />
                     </div>
                     <ul class="user-nav">
                         <li>
@@ -62,17 +60,30 @@
                     </ul>
                 </nav>
             </div>
-            <div class="main-content">
+            <div class="main-content main-content-message">
                 <h2>Message Board</h2>
                 <p class="introduction">Leave what you wanna say</p>
                 <div class="main-message">
-                    <img src="./images/QQ.jpg" alt="" />
+                    <img src="./images/QQ.jpg" alt="avatar" />
                     <div class="content">
                         <p class="name">善良的小飞</p>
                         <p>
                             小飞太帅了
                         </p>
                         <p class="date">2022-10-26 10：00</p>
+                        <p>
+                            <input type="text" placeholder="我也说一句" />
+                        </p>
+                    </div>
+                </div>
+                <div class="main-message">
+                    <img src="./images/deckwang.jpg" alt="avatar" />
+                    <div class="content">
+                        <p class="name">Deck Wang</p>
+                        <p>
+                            如果帅是一种错，那么我王昱飞将一错再错
+                        </p>
+                        <p class="date">2022-9-28 10：00</p>
                         <p>
                             <input type="text" placeholder="我也说一句" />
                         </p>
